hphp/hack/test/typecheck/error_messages/inc_dynamic.php.exp
File "inc_dynamic.php", line 4, characters 12-13:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "inc_dynamic.php", line 4, characters 10-13:
Invalid return type (Typing[4110])
  File "inc_dynamic.php", line 3, characters 27-32:
  Expected `string`
  File "inc_dynamic.php", line 4, characters 10-13:
  But got `dynamic` because a type could not be determined here
